# s3-file-share-for-free

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  config.py  main.py  pyproject.toml  requirements.txt  s3_utils.py  storage_providers.py
static/css/: tailwind.css
static/js/: main.js  script.js
templates/: configure.html  index.html
