[tool.poetry]
name = "s3filesharegui"
version = "0.1.0"
description = ""
authors = ["ghumare64@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0"
flask = "^3.0.0"
openai = "^1.12.0"
python-dotenv = "^1.0.1"
langchain = "^0.1.9"
langchain-openai = "^0.0.5"
chromadb = "^0.4.22"
tiktoken = ">=0.5.2,<0.6.0"
boto3 = "^1.34.7"
werkzeug = "^3.0.1"
botocore = "^1.34.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
